syntax = "proto3";

package io.aggregator.action;

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/second_entity.proto";

option java_outer_classname = "SecondToMinuteService";

service SecondToMinute {
  option (akkaserverless.codegen) = {
    action : {}
  };

  rpc OnSecondCreated(entity.SecondCreated) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity : "second"
    };
  }

  rpc OnSecondAggregated(entity.SecondAggregated)
      returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity : "second"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity : "second"
    };
  }
}
