syntax = "proto3";

import "google/protobuf/timestamp.proto";

package io.aggregator.entity;

option java_outer_classname = "SecondEntity";

message SecondCreated {
  string merchant_id = 1;
  int64 epoch_second = 2;
}

message SecondTransactionAdded {
  string merchant_id = 1;
  int64 epoch_second = 2;
  string transaction_id = 3;
  double amount = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message SecondAggregated {
  string merchant_id = 1;
  int64 epoch_second = 2;
  double transaction_total_amount = 4;
  int32 transaction_count = 5;
  google.protobuf.Timestamp last_update_timestamp = 6;
  google.protobuf.Timestamp aggregateRequestTimestamp = 7;
}

message SecondState {
  string merchant_id = 1;
  int64 epoch_second = 2;
  int64 epoch_minute = 3;
  int64 epoch_hour = 4;
  int64 epoch_day = 5;
  repeated Transaction transactions = 6;
  google.protobuf.Timestamp last_update_timestamp = 7;
}

message Transaction {
  string merchant_id = 1;
  int64 epoch_second = 2;
  string transaction_id = 3;
  double amount = 4;
  google.protobuf.Timestamp timestamp = 5;
}
